[package]
name = "wesers"
version = "0.4.2"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
description = "a simple HTTP/HTTPS server in Rust"
repository = "https://github.com/wdv4758h/wesers/"
keywords = ["web", "server"]
build = "build.rs"

[features]
default = []
https = ["iron/ssl"]

[dependencies]
clap = { version = "2.19.2", features = ["yaml"] }
iron = "0.4.0"
mount = "0.2.1"         # iron 0.4
staticfile = "0.3.1"    # iron 0.4
logger = "0.2.0"        # iron 0.4
rustc-serialize = "0.3.22"
mustache = "0.8.0"
env_logger = "0.3.5"

[build-dependencies]
clap = { version = "2.19.2", features = ["yaml"] }

[profile.release]
lto = true
