[package]
name = "wesers"
version = "0.4.2"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
description = "a simple HTTP/HTTPS server in Rust"
repository = "https://github.com/wdv4758h/wesers/"
keywords = ["web", "server"]
build = "build.rs"

[features]
default = ["https"]
https = []

[dependencies]
actix-web = { version = "0.6.4", features = ["alpn"] }
clap = { version = "2.31.2", features = ["yaml"] }
mustache = "0.9.0"
env_logger = "0.5.10"
openssl = "0.10.7"

[build-dependencies]
clap = { version = "2.31.2", features = ["yaml"] }

[profile.release]
lto = true
